# speech2action

./: CMakeLists.txt  README.md  package.xml
scripts/: actions.py  constructs.py  parser.py  spit_grammar.py
